--- a/app/browse.html
+++ b/app/browse.html
@@ -10,10 +10,15 @@
     <aside class="sidebar">
       <div class="sidebar-inner">
         <div class="sidebar-header">
-          <span class="sidebar-title">Navigation</span>
-          <button id="sidebarCollapseBtn" class="sidebar-collapse-btn" type="button">
-            ⟨
-          </button>
+           <span class="sidebar-title"></span>
+           <div class="nav-button">
+                <button id="sidebarExpandBtn" class="sidebar-expand-btn" type="button">
+                    ☰
+                </button>
+                <button id="sidebarCollapseBtn" class="sidebar-collapse-btn" type="button">
+                    ☰
+                </button>
+           </div>
         </div>
         <nav class="sidebar-nav">
           <a href="search.html" data-page="search">Search</a>
@@ -23,9 +28,6 @@
     </aside>
 
     <main>
-      <button id="sidebarExpandBtn" class="sidebar-expand-btn" type="button">
-        ☰
-      </button>
 
       <h1>Series Index</h1>
       <p class="subtitle">
