Remove "no." from browse metadata

--- a/app/browse.html
+++ b/app/browse.html
@@ -131,7 +131,7 @@
           const dateText = item.date || "∅";
 
           metaDiv.textContent =
-            "Seq: " + seqText + " · No: " + numText + " · Date: " + dateText;
+            "Seq: " + seqText + " · Date: " + dateText;
 
           a.appendChild(titleDiv);
           a.appendChild(metaDiv);
