Do not display filename

--- a/app/search.html
+++ b/app/search.html
@@ -31,7 +31,7 @@
 
       <h1>Search Leibniz Texts</h1>
       <p class="subtitle">
-        Searches across the <code>text</code> fields in <code>sample_entries.json</code>.
+        Searches across the <code>text</code> fields.
         Results show only the matching line; click to open the full entry.
       </p>
 
