--- a/app/detail.html
+++ b/app/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Entry Detail</title>
+  <title>Entry Details</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -22,7 +22,8 @@
         </div>
         <nav class="sidebar-nav">
           <a href="search.html" data-page="search">Search</a>
-          <a href="browse.html" data-page="index">Series Index</a>
+          <a href="browse.html" data-page="browse">Series Index</a>
+          <a href="index.html" data-page="index">Home</a>
         </nav>
       </div>
     </aside>
