--- a/app/browse.html
+++ b/app/browse.html
@@ -22,7 +22,8 @@
         </div>
         <nav class="sidebar-nav">
           <a href="search.html" data-page="search">Search</a>
-          <a href="browse.html" data-page="index">Series Index</a>
+          <a href="browse.html" data-page="browse">Series Index</a>
+          <a href="index.html" data-page="index">Home</a>
         </nav>
       </div>
     </aside>
