--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>JSON Text Search</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="app/styles.css" />
 </head>
 <body>
    <div class="layout">
@@ -21,9 +21,9 @@
            </div>
         </div>
         <nav class="sidebar-nav">
-          <a href="search.html" data-page="search">Search</a>
-          <a href="browse.html" data-page="browse">Series Index</a>
-          <a href="index.html" data-page="index">Home</a>
+          <a href="app/search.html" data-page="search">Search</a>
+          <a href="app/browse.html" data-page="browse">Series Index</a>
+          <a href="../index.html" data-page="index">Home</a>
         </nav>
       </div>
     </aside>
